Revert "Update projects.html"
This reverts commit 723e3f2e9a1e793605e4ec36eb2600b3cf611c2f.

--- a/projects.html
+++ b/projects.html
@@ -18,7 +18,7 @@
         </div>
     </header>      
     
-    <main style="background-color: #0F0F0F;"> <h1><span>las </span> projects </h1></main>
+    <main style="background-color: #0F0F0F;"> <h1><span> last </span> projects </h1></main>
 
         <nav>
             <div class="pr1">
